--- a/Document_2025/C_2025.md
+++ b/Document_2025/C_2025.md
@@ -2935,3 +2935,34 @@ Gemini 가 맞다고 해줌
 3. Outbox 패턴 & 이벤트 소싱  
 · DB 업데이트와 외부 시스템 호출 간에 “같은 DB 커밋 안에서 메시지(outbox 테이블)에 기록 → 뒤에서 메시지 브로커로 전달”하는 방식  
 · 결국 “트랜잭션 경계는 DB 한 곳으로 모으고, 외부 시스템은 메시지 처리기로 비동기 분리”하는 접근입니다.
+
+## 25.06.16
+
+- CSRF, Forward Secrecy 관련 Gemini 문답
+
+두 가지 개념의 목적과 작동 방식은 다음과 같습니다.
+
+* **CSRF (Cross-Site Request Forgery) 방어:**
+    * **목적:** 사용자가 로그인되어 있는 웹사이트에 대해, 공격자가 사용자의 의지와 무관하게 악성 요청(예: 비밀번호 변경, 송금)을 보내지 못하도록 막는 것입니다.
+    * **취약점의 종류:** 사용자의 **권한을 오용**하는 공격입니다.
+    * **방어 방식:**
+        * **CSRF 토큰:** 요청이 사용자 본인에 의해 시작되었음을 확인하기 위한 일회용/세션용 토큰 사용.
+        * **SameSite 쿠키:** 브라우저가 크로스-사이트 요청에 쿠키를 포함하지 않도록 제한.
+        * **Origin/Referer 검증:** 요청의 출처가 허용된 도메인인지 확인.
+    * **관련 개념:** 웹 애플리케이션의 **사용자 권한 관리 및 요청 유효성 검증**과 밀접하게 관련됩니다.
+
+* **Forward Secrecy (Perfect Forward Secrecy, PFS):**
+    * **목적:** 암호화된 통신에서 **장기 비밀 키(예: 서버의 SSL/TLS 개인 키)가 미래에 유출되더라도, 과거의 통신 내용은 해독될 수 없도록** 보장하는 것입니다.
+    * **취약점의 종류:** 암호화된 **통신 내용의 기밀성**과 관련된 공격입니다.
+    * **방어 방식:**
+        * **임시(Ephemeral) 키 교환 방식 사용:** Diffie-Hellman (DH) 또는 Elliptic Curve Diffie-Hellman (ECDH)과 같은 알고리즘을 사용하여, 매 세션마다 새로운 임시 세션 키를 생성하고, 세션 종료 후 즉시 폐기합니다. 장기 키는 주로 인증에만 사용됩니다.
+    * **관련 개념:** **암호화 프로토콜(주로 TLS/SSL)**의 키 관리 및 암호학적 보안 강도와 밀접하게 관련됩니다.
+
+- 요약 및 차이점
+
+| 특징              | CSRF 방어                                | Forward Secrecy                               |
+| **목적**          | 사용자 권한 오용 방지                    | 과거 통신 내용의 기밀성 유지 (키 유출 시에도) |
+| **대상의 취약점** | 웹 애플리케이션의 요청 유효성 검증       | 암호화된 통신 내용의 복호화 가능성            |
+| **작동 위치**     | 주로 웹 애플리케이션 계층                | 주로 암호화 프로토콜 계층 (TLS/SSL)           |
+| **관련 기술**     | CSRF 토큰, SameSite 쿠키, Origin/Referer | Diffie-Hellman (DH/ECDH) 키 교환              |
+
