--- a/Document_2025/C_2025.md
+++ b/Document_2025/C_2025.md
@@ -2966,3 +2966,28 @@ Gemini 가 맞다고 해줌
 | **작동 위치**     | 주로 웹 애플리케이션 계층                | 주로 암호화 프로토콜 계층 (TLS/SSL)           |
 | **관련 기술**     | CSRF 토큰, SameSite 쿠키, Origin/Referer | Diffie-Hellman (DH/ECDH) 키 교환              |
 
+## 25.06.23
+
+[교도소에서 데이터베이스 작업하기  GeekNews](https://news.hada.io/topic?id=21491&utm_source=weekly&utm_medium=email&utm_campaign=202525)
+
+- [Working on databases from prison How I got here, part 2.](https://turso.tech/blog/working-on-databases-from-prison)
+- Preston Thorpe
+
+    To put this entirely into perspective for some of you may be difficult, but in prison there isn’t exactly a whole lot to do and programming absolutely consumes my life. I either write code or manage Kubernetes clusters or other infrastructure for about 90 hours a week, and my only entertainment is a daily hour of tech/programming YouTube; mostly consisting of The Primeagen, whose story was a huge inspiration to me early on.
+
+    Through Prime, I had known about Turso since the beginning and had watched several interviews with Glauber and Pekka discussing their Linux kernel backgrounds and talking about the concept of distributed, multi-tenant SQLite. These were folks I'd looked up to for years and definitely could not have imagined that I would eventually be in any position to be contributing meaningfully to such an ambitious project of theirs. So needless to say, for those first PR's, just the thought of a kernel maintainer reviewing my code had made me quite nervous.
+
+    Helping build Limbo quickly became my new obsession. I split my time between my job and diving deep into SQLite source code, academic papers on database internals, and Andy Pavlo's CMU lectures. I was active on the Turso Discord but I don't think I considered whether anyone was aware that one of the top contributors was doing so from a prison cell. My story and information are linked on my GitHub, but it's subtle enough where you could miss it if you didn't read the whole profile. A couple months later, I got a Discord message from Glauber introducing himself and asking if we could meet.
+
+**Turso와 Project Limbo와의 만남**
+
+- 2023년 12월, 프로젝트를 탐색하던 중 Hacker News를 통해 Turso의 Project Limbo(SQLite를 처음부터 다시 만드는 프로젝트)를 접하게 되었음
+- 나는 데이터베이스 관련 실무 경험은 없었으나 저장소 엔진에 대한 관심이 생기기 시작했고, 프로젝트가 초창기라 기여할 수 있는 많은 부분이 남아있었음
+- 교도소 내에서 할 수 있는 일이 거의 없는 상황에서 나는 거의 90시간을 개발, Kubernetes, 인프라 관리 등에 몰두함
+- 주요 엔터테인먼트는 하루 1시간의 테크/프로그래밍 YouTube 시청이었으며, The Primeagen의 이야기에서 큰 동기를 얻었음.
+- Primeagen 채널을 통해 처음부터 Turso와 해당 개발자들의 Linux 커널 배경 등을 알게 되었음
+- 나는 이 대담한 프로젝트에 의미 있는 기여를 하게 될 줄은 상상도 하지 못했음
+- 초기 PR 제출 시 커널 커미터들이 코드 리뷰를 한다는 점에 상당한 긴장감을 느꼈음.
+- Limbo 개발 참여는 곧 새로운 집착 대상이 되었음
+- 본업 외에도 SQLite 소스코드, 데이터베이스 내부 동작에 대한 아카데믹 논문, Andy Pavlo의 CMU 강의까지 몰입하며 역량을 키웠으며, Turso Discord에서도 활발히 활동하였음
+- 나의 교도소 수감 사실이 GitHub에 공개되어 있었으나, 대부분의 커뮤니티에서는 이를 인지하지 못했음
