--- a/Document_2025/C_2025.md
+++ b/Document_2025/C_2025.md
@@ -2991,3 +2991,49 @@ Gemini 가 맞다고 해줌
 - Limbo 개발 참여는 곧 새로운 집착 대상이 되었음
 - 본업 외에도 SQLite 소스코드, 데이터베이스 내부 동작에 대한 아카데믹 논문, Andy Pavlo의 CMU 강의까지 몰입하며 역량을 키웠으며, Turso Discord에서도 활발히 활동하였음
 - 나의 교도소 수감 사실이 GitHub에 공개되어 있었으나, 대부분의 커뮤니티에서는 이를 인지하지 못했음
+
+## 25.06.25
+
+[인증제도(ISMS-P)  개인정보보호위원회   기업참여접기,펼치기기업 정책접기,펼치기](https://www.pipc.go.kr/np/default/page.do?mCode=I030020000)
+
+> '정보보호 및 개인정보보호 관리체계 인증'(ISMS-P : Personal information & Information Security Management System)은 '개인정보보호 관리체계 인증(PIMS)'과 '정보보호 관리체계 인증(ISMS)'으로 개별 운영되던 인증체계를 하나로 통합한 '통합인증제도'로 2018년 11월 7일부터 시행되었습니다.
+
+- 관련 chatGPT 문답
+
+### 📌 한국에서의 사이버 보안 관련 주요 법적 제도
+
+#### 1. **정보통신망 이용촉진 및 정보보호 등에 관한 법률(정보통신망법)**
+
+ * 개인정보 보호 조치 의무 (암호화, 접근제어, 로그 보관 등)
+ * 해킹 사고 발생 시 지체 없이 신고 및 이용자 통지 의무
+ * **정보보호 책임자(CISO)** 지정 의무 (규모에 따라 달라짐)
+* **적용 시기:** 트래픽, 사용자 수, 수익 등의 기준으로 **중소기업**에서 **중견/대기업** 수준으로 성장할 경우 점점 적용 조항이 늘어남
+
+#### 2. **개인정보 보호법**
+
+ * 내부관리계획 수립
+ * 개인정보 유출 시 **72시간 이내** 신고 의무
+ * 위탁/제3자 제공 시 고지 및 계약서 작성
+ * **개인정보 영향평가** (서비스 규모가 크고 민감한 정보를 다루는 경우)
+
+#### 3. **ISMS (정보보호관리체계) 인증**
+
+* **의무 대상:**
+
+  * 연매출 100억 이상
+  * 일평균 방문자 수 100만명 이상 (웹/모바일 합산)
+  * 클라우드, 쇼핑몰, 게임 등 특정 업종은 더 엄격함
+* **내용:**
+  * 기업의 정보보안 관리체계가 국가 기준을 충족하는지 인증
+  * 보안 정책, 접근 통제, 백업/복구, 재해복구 계획 등
+* **벌칙:** 인증 미취득 시 영업 제한 혹은 과태료 가능성 있음
+
+### 💡 실제 스타트업이 스케일업하며 맞닥뜨릴 수 있는 규제 예시
+
+| 서비스 규모 변화      | 적용 법적 의무 변화                                                   |
+| --------------        | -------------------------------------------------                     |
+| 월 사용자 1천명 수준  | 기본적인 정보보안 조치 (DB 암호화, https 등)                          |
+| 일 사용자 10만명 돌파 | ISMS 인증 대상 검토, 개인정보보호법 의무 강화                         |
+| B2B SaaS 고객 확보    | 클라이언트 기업의 보안 감사 대응 필요 (SOC2, ISO27001 등 요구 가능성) |
+| 글로벌 진출 시        | 유럽(GDPR), 미국(CCPA), 일본(APPI) 등 각국 법률에 따른 보안 정책 필요 |
+
