--- a/Document_2025/C_2025.md
+++ b/Document_2025/C_2025.md
@@ -3070,3 +3070,84 @@ Supabase MCP allows query-only access if the readonly flag is set during agent i
 Before passing data to the assistant, scan them for suspicious patterns like imperative verbs, SQL-like fragments, or common injection triggers. This can be implemented as a lightweight wrapper around MCP that intercepts data and flags or strips risky input.
 
 This safeguard won’t catch every attack, but it provides a scalable and realistic first layer of defense—especially for teams using third-party IDEs like Cursor where structured context boundaries aren’t feasible.
+
+## 25.07.15
+
+[Windows 103. 작업 관리자에서의 Commit size가 가리키는 메모리의 의미](https://www.sysnet.pe.kr/2/0/1850)
+
+1. Reserve (예약 메모리)
+  * 프로세스의 가상 주소 공간만 확보한다.
+  * 실제 물리 메모리 (RAM) 과 페이지 파일은 사용하지 않는다.
+
+2. Commit (커밋 메모리)
+  * 이미 예약한 주소 공간(혹은 자동 확장된 공간)에 실제 물리 메모리(또는 페이지 파일)를 연결하는 작업
+  * 실제로 접근 가능한 메모리 블록이 생성된다.
+
+3. Guard (페이지 메모리 가드)
+  * Windows의 가상 메모리 보호 플래그 중 하나로, 해당 페이지에 접근이 일어나면 예외를 발생시키고 그 이후 해당 보호 속성을 제거
+  * 사용자가 스택의 커밋된 영역을 초과하려고 할 때, 바로 아래에 있는 Guard Page에 접근하게 됩니다. 페이지 guard 에 다다르면 windows는 STATUS_GUARD_PAGE_VIOLATION (0x80000001) 예외를 발생시키고
+  * 운영체제는 이를 감지하고 자동으로 새로운 스택 페이지를 Commit하고, 그 아래에 다시 Guard Page를 설정합니다. -> stack 이 조금씩 확장
+  * reserved memory 영역까지 넘어서서 더 이상 commit 할 수 있는 예약 공간이 없다면 그때 발생하는 것이 우리가 아는 StackOverflow
+
+
+    가상 메모리의 "예약(Reserve)"과 "실제 할당(Commit)"의 차이점을 아실 것입니다. 이것이 사용되는 대표적인 활용예가 바로 "스레드의 스택(Stack)"인데요. 윈도우 프로그램에서 스레드 하나를 생성하면 그 스레드가 사용하게 될 스택을 위해 (기본값으로) 1MB 메모리를 사용하게 됩니다. (너무 크지 않나??? 하고 놀라는 분도 계실 듯 싶습니다.) 1MB라니! 따라서 32비트 윈도우 시스템에서 EXE 프로세스의 사용자 메모리 영역으로 2GB가 할당되어 있기 때문에 대략 2천개 정도의 스레드를 생성하면 개당 1MB 씩 계산해서 거의 2GB 가상 메모리를 모두 점유해 메모리 부족(좀 더 정확히는, 주소 공간 부족)에 시달리게 됩니다.
+
+    그런데, 여기서 윈도우는 약간 똑똑한 작업을 합니다. 스레드 스택을 '가상 메모리'로써 연속된 주소를 보장하도록 1MB를 예약하긴 하지만 그 1MB 전부를 미리 할당(Commit)하지는 않습니다. 대신 (32비트 운영체제에서 기본값으로) 4KB 영역을 할당(commit)해서 사용하고 추가적으로 그 위의 4KB를 guard 접근 권한으로 미리 할당해서 최초 8KB를 할당하게 됩니다. 나머지 "1016KB = 1MB - 8KB" 영역은 가상 주소(virtual address) 상으로 점유만 하고 있을 뿐, 실제로 그 영역을 위해 물리 메모리나 디스크 상에 할당이 되는 것은 아닙니다.
+
+    그러다가, 스레드가 4KB 영역을 넘어서 guard 페이지로 할당된 메모리를 접근하는 순간 Fault 예외가 발생하고 윈도우 운영체제는 그 순간 guard 페이지를 응용 프로그램이 사용할 수 있는 평범한 Read/Write 페이지로 바꾸고 새로운 4KB 물리 메모리를 또다시 할당해 guard 페이지로 설정해 놓습니다. 그런 식으로 4KB씩 자라다가 "1020KB = 1MB - 4KB"가 넘는 순간 Stackoverflow 예외가 발생하는 것입니다. 왜냐하면 마지막 guard 페이지는 그 이후의 보호 장치를 걸어둘 수 없는 이유로 사용하지 않습니다. (참고로, 64비트에서는 8KB + 8KB로 해서 최초 16KB를 commit합니다.)
+
+       높은 주소
+    ┌───────────────┐
+    │   예약 영역   │ ← Reserve only (아직 커밋되지 않음)
+    ├───────────────┤
+    │  Guard Page   │ ← PAGE_GUARD
+    ├───────────────┤
+    │  커밋된 스택  │ ← 실제 사용할 수 있는 스택
+    ├───────────────┤
+    │  스택 최하단  │
+    └───────────────┘
+       낮은 주소
+
+---
+
+[VC++ 107. VirtualAlloc, HeapAlloc, GlobalAlloc, LocalAlloc, malloc, new의 차이점](https://www.sysnet.pe.kr/2/0/11152)
+
+- [What was the difference between LocalAlloc and GlobalAlloc - The Old New Thing](https://devblogs.microsoft.com/oldnewthing/?p=37433&WT.mc_id=DT-MVP-4038148)
+
+- Windows의 16비트 시절 메모리 모델
+- 당시에는 세그먼트/오프셋 기반 주소 모델, 즉 selector + offset = 실제 주소 방식
+- LocalInit → 해당 세그먼트를 지역 힙으로 설정.
+- LocalAlloc → 그 안에서 near pointer 기반 메모리 할당.
+  - near pointer : 16비트 주소에서 offset 만 있는 포인터 (0x1234 등), 현재 세그먼트 내에서 유효하다.
+- GlobalAlloc
+  - 전역 힙(Global heap)에서 메모리 할당, Windows가 새로운 **세그먼트(selector)**를 만들어 줌
+  - 반환값: far pointer → segment:offset 구조 (0x4567:0x1234 같은 구조), memory segment 를 넘나들 수 있다.
+  - 큰 메모리 (64KB 이상) 를 할당하거나, 여러 dll 이나/exe 가 메모리를 공유해야하는 경우에 사용
+
+- 이런 모델에서는 당연히 memory segment 파편화가 빈번히 발생했으며, 큰 메모리가 필요한 프로세스가 등장하게 되면서 더 이상 운용하기 어렵게 되었다.
+  - 현재는 호환성을 위한 흔적만 남아있고 주로 사용되지 않고 있음.
+
+```
+┌────────────────────────────┐
+│        EXE 인스턴스        │  ← HINSTANCE #1 (기본 selector)
+│ ┌────────────────────────┐ │
+│ │  Local Heap (EXE)      │ │  ← LocalInit()
+│ │  - LocalAlloc()        │ │  → near pointer
+│ └────────────────────────┘ │
+└────────────────────────────┘
+
+┌────────────────────────────┐
+│        DLL 인스턴스        │  ← HINSTANCE #2 (DLL용 selector)
+│ ┌────────────────────────┐ │
+│ │  Local Heap (DLL)      │ │  ← LocalInit()
+│ │  - LocalAlloc()        │ │  → near pointer
+│ └────────────────────────┘ │
+└────────────────────────────┘
+
+┌────────────────────────────┐
+│      GlobalAlloc 영역      │  ← GlobalAlloc() 으로 생성한 새 selector
+│ ┌────────────────────────┐ │
+│ │  (원래는 힙 아님)       │
+│ └────────────────────────┘ │
+└────────────────────────────┘
+```
