--- a/Document_2025/C_2025.md
+++ b/Document_2025/C_2025.md
@@ -932,7 +932,7 @@ updateRefs = true
 - Airbnb의 검색 결과는 두가지로 제공됨
   - 목록 형식 (list-results, 숙소 이미지·가격·평점 등이 표시된 카드 형태)
   - 지도 형식 (map-results, 지도를 기반으로 가격이 표시된 핀 형태)
-- 기존 검색 랭킹 알고리듬은 두 형식 모두 예약 확률에 따라 정렬해 목록을 생성하는 방식이었지만, 지도에서는 개별 핀(pint) 으로 표시되므로 새로운 접근 방법이 필요
+- 기존 검색 랭킹 알고리듬은 두 형식 모두 예약 확률에 따라 정렬해 목록을 생성하는 방식이었지만, 지도에서는 개별 핀(pin) 으로 표시되므로 새로운 접근 방법이 필요
 
 
 - 목록 형식에서는 위에서부터 사용자 주의가 점차 감소한다는 전제가 있음
