--- a/Document_2025/C_2025.md
+++ b/Document_2025/C_2025.md
@@ -3127,27 +3127,76 @@ This safeguard won’t catch every attack, but it provides a scalable and realis
 - 이런 모델에서는 당연히 memory segment 파편화가 빈번히 발생했으며, 큰 메모리가 필요한 프로세스가 등장하게 되면서 더 이상 운용하기 어렵게 되었다.
   - 현재는 호환성을 위한 흔적만 남아있고 주로 사용되지 않고 있음.
 
-```
-┌────────────────────────────┐
-│        EXE 인스턴스        │  ← HINSTANCE #1 (기본 selector)
-│ ┌────────────────────────┐ │
-│ │  Local Heap (EXE)      │ │  ← LocalInit()
-│ │  - LocalAlloc()        │ │  → near pointer
-│ └────────────────────────┘ │
-└────────────────────────────┘
 
-┌────────────────────────────┐
-│        DLL 인스턴스        │  ← HINSTANCE #2 (DLL용 selector)
-│ ┌────────────────────────┐ │
-│ │  Local Heap (DLL)      │ │  ← LocalInit()
-│ │  - LocalAlloc()        │ │  → near pointer
-│ └────────────────────────┘ │
-└────────────────────────────┘
+    ┌────────────────────────────┐
+    │        EXE 인스턴스        │  ← HINSTANCE #1 (기본 selector)
+    │ ┌────────────────────────┐ │
+    │ │  Local Heap (EXE)      │ │  ← LocalInit()
+    │ │  - LocalAlloc()        │ │  → near pointer
+    │ └────────────────────────┘ │
+    └────────────────────────────┘
 
-┌────────────────────────────┐
-│      GlobalAlloc 영역      │  ← GlobalAlloc() 으로 생성한 새 selector
-│ ┌────────────────────────┐ │
-│ │  (원래는 힙 아님)       │
-│ └────────────────────────┘ │
-└────────────────────────────┘
+    ┌────────────────────────────┐
+    │        DLL 인스턴스        │  ← HINSTANCE #2 (DLL용 selector)
+    │ ┌────────────────────────┐ │
+    │ │  Local Heap (DLL)      │ │  ← LocalInit()
+    │ │  - LocalAlloc()        │ │  → near pointer
+    │ └────────────────────────┘ │
+    └────────────────────────────┘
+
+    ┌────────────────────────────┐
+    │      GlobalAlloc 영역      │  ← GlobalAlloc() 으로 생성한 새 selector
+    │ ┌────────────────────────┐ │
+    │ │  (원래는 힙 아님)       │
+    │ └────────────────────────┘ │
+    └────────────────────────────┘
+
+## 25.07.18
+
+**Async Local 을 잘못 쓴 사례**
+
+```cs
+AsyncLocal<List<string>> asyncLocal = new();
+
+var thread = new Thread(채널_스레드);
+thread.Start();
+
+//...
+
+void 채널_스레드()
+{
+    asyncLocal.Value ??= ["ParentFlow Started"];
+    Log.I.Info(string.Join(", ", asyncLocal.Value)); //ParentFlow Started
+
+    Task.Run(async () => 
+    {
+        //GCSession 파괴 시 Task 생성 및 fire and forgot
+        //부모 실행 흐름과 동일한 ExecutionContext 를 공유합니다.
+
+        Log.I.Info(string.Join(", ", asyncLocal.Value)); // <-- Race Condition (Read)
+    });
+
+    //.. 채널 스레드는 이어서 Update 루프를 수행합니다.
+    asyncLocal.Value.Add("Loop Running"); // <-- Race Condition (Write)
+}
 ```
+
+채널 Update 는 동기(Synchronous) & 직렬 실행되지만 
+채널 스레드에서 생성한 Task는 채널 실행 흐름의 ExecutionContext 를 그대로 상속받습니다.
+
+AsyncLocal 을 통해 실행 흐름 간의 값을 공유하는 경우
+-  AsyncLocal<T> 자체는 thread-safe 를 보장하나
+-  다수의 스레드가 AsyncLocal<T> 에 접근할 수 있다고 생각해야 합니다. 
+- 위의 예시에서는 List<T> 타입이 thread-safe 하지 않아 문제가 생길 수 있습니다.
+
+
+- 따라서 AsyncLocal<T> 의 T 를 불변타입으로 설정한다면 예외가 발생하는 문제를 막을 수 있습니다.
+- `ExecutionContext.SuppressFlow` 같은 좀 더 저수준에서 흐름을 제어하는 방법이 있지만 자주 사용하기에는 실수하기 쉽습니다.
+  + 깊은 디테일은 개발팀 전체 공유가 어려움
+- Scope 스타일의 기능들은 ThreadLocal 처럼 Stack 기반의 동기 메서드 위에서 적합하고
+  - 흐름(flow) 를 추상적으로 표현한 async 메서드 에서는 부적절할 것 같아서
+  - AsyncLocal → ThreadLocal 전환하고 async 메서드에서는 아예 사용하지 않는 방향으로 고려중
+    - ExecutionContext는 직렬 & 병렬의 구분없이 그저 흐름에 따라 값을 전파하는 것에 최적화됨.
+  - System.Diagnostics.Activity 네임스페이스에서는 .NET 의 분산추적(.NET Distributed Tracing) 시스템이 존재
+ 
+
