--- a/Document_2025/C_2025.md
+++ b/Document_2025/C_2025.md
@@ -3200,3 +3200,20 @@ AsyncLocal 을 통해 실행 흐름 간의 값을 공유하는 경우
   - System.Diagnostics.Activity 네임스페이스에서는 .NET 의 분산추적(.NET Distributed Tracing) 시스템이 존재
  
 
+---
+
+[마비노기 모바일 공홈 보안 심각하네 - 마비노기 모바일 - 에펨코리아](https://www.fmkorea.com/8661017098)
+
+    보안 전문가는 아니고 그냥 앱개발 웹개발 취미로 깔딱 거리며 건드려 본 아마추어 개발자임.
+
+    댓글에 html태그나 자바스크립트 코드를 심을 수 있는 것 같음 
+
+    크로스 사이트 스크립팅, xss라 부르는 일종의 핵인데, 경우에 따라서 단순히 팝업을 띄우는 것 말고도 갖가지 일들이 일어날 수 있음. 
+
+    전적으로 해킹을 시도한 사람의 코드에 사악한 의도가 담겨 있지 않을 가능성과 홈페이지 제작자가 보안에 대비하는 것을 믿는 수 밖에 없는데, 이 모양인 걸 보면 전혀 무방비일 것 같아서 좀 걱정이 된다.
+
+    여러분들은 저처럼 궁금해서 괜히 열어보거나 하지 말고 잠을 잡시다.
+
+[공홈 누가 해킹한거야 ㅋㅋㅋㅋ - 마비노기 모바일 마이너 갤러리](https://gall.dcinside.com/mgallery/board/view/?id=mabinogimobile&no=1693684)
+
+![250718_mabinogimobile_hacking](img/250718_mabinogimobile_hacking.png)
