--- a/Document_2025/C_2025.md
+++ b/Document_2025/C_2025.md
@@ -3217,3 +3217,37 @@ AsyncLocal 을 통해 실행 흐름 간의 값을 공유하는 경우
 [공홈 누가 해킹한거야 ㅋㅋㅋㅋ - 마비노기 모바일 마이너 갤러리](https://gall.dcinside.com/mgallery/board/view/?id=mabinogimobile&no=1693684)
 
 ![250718_mabinogimobile_hacking](img/250718_mabinogimobile_hacking.png)
+
+## 25.07.20
+
+### AAID와 IDFV: 모바일 앱 식별자의 핵심 개념 (Gemini 답변)
+
+> **AAID (Android Advertising ID)**와 **IDFV (Identifier for Vendor)**는 모바일 환경에서 사용자를 식별하기 위한 고유한 값입니다. 두 식별자는 사용 목적과 작동 방식에 있어 중요한 차이점을 가집니다.
+
+**AAID (Android Advertising ID): 맞춤형 광고를 위한 식별자**
+
+**AAID**는 구글이 안드로이드 기기 사용자에게 부여하는 고유한 광고 식별자입니다. 주요 목적은 사용자의 앱 활동을 추적하여 맞춤형 광고를 제공하는 것입니다.
+
+- 기기 프로필의 귀속되는 식별자. (UUID 기반)
+- 소프트웨어(Google Play 서비스)에 의해 생성되는 비영구적인 식별자 + 사용자가 재설정 가능
+
+* **사용자 제어 가능:** 사용자는 언제든지 기기 설정에서 AAID를 재설정하거나 광고 ID 기반의 개인 맞춤 광고 수신을 거부(Opt-out)할 수 있습니다. 이를 통해 개인 정보 보호에 대한 통제권을 가집니다.
+* **광고 목적 활용:** 광고주와 마케터는 AAID를 활용하여 사용자의 관심사를 파악하고, 관련성 높은 광고를 노출하며, 광고 캠페인의 효과를 측정합니다. 예를 들어, 특정 게임 앱을 설치한 사용자에게 유사한 장르의 다른 게임 광고를 보여주는 것이 가능합니다.
+* **앱 간 추적:** AAID는 기기 전체에서 동일한 값을 가지므로, 여러 다른 개발사의 앱에서도 동일한 사용자를 인식하고 활동을 추적할 수 있습니다.
+
+**IDFV (Identifier for Vendor): 개발사별 사용자 분석용 식별자**
+
+**IDFV**는 애플이 iOS 기기에서 동일한 개발사(Vendor)가 출시한 모든 앱에 대해 동일하게 부여하는 식별자입니다.
+
+* **개발사 단위로 작동:** 한 개발사가 만든 여러 앱을 하나의 기기에 설치하면, 이 앱들은 모두 동일한 IDFV를 공유합니다. 하지만 다른 개발사의 앱은 다른 IDFV 값을 가집니다.
+* **제한적인 사용자 추적:** AAID와 달리, IDFV는 광고를 목적으로 여러 앱을 넘나들며 사용자를 추적하는 데 사용될 수 없습니다. 주로 개발사가 자사 앱들 내에서 사용자 경험을 개선하거나, 앱 간 상호작용을 파악하는 등의 분석 목적으로 활용됩니다.
+* **앱 삭제 시 초기화:** 사용자가 기기에서 특정 개발사의 모든 앱을 삭제하면, 해당 개발사에 대한 IDFV도 함께 삭제됩니다. 이후 같은 개발사의 앱을 다시 설치하면 새로운 IDFV가 생성됩니다.
+
+**핵심 차이점 요약**
+
+| 구분            | **AAID (Android)**                | **IDFV (iOS / mac)**                        |
+| :---            | :---                              | :---                                        |
+| **주요 목적**   | 맞춤형 광고 및 광고 효과 측정     | 개발사 내부 사용자 분석 및 경험 개선        |
+| **적용 범위**   | 기기 전체 (모든 앱)               | 동일 개발사의 앱                            |
+| **사용자 제어** | 사용자가 직접 재설정 및 거부 가능 | 사용자가 직접 제어 불가 (앱 삭제 시 초기화) |
+| **플랫폼**      | 안드로이드                        | iOS, mac                                    |
