--- a/Document_2025/C_2025.md
+++ b/Document_2025/C_2025.md
@@ -3251,3 +3251,35 @@ AsyncLocal 을 통해 실행 흐름 간의 값을 공유하는 경우
 | **적용 범위**   | 기기 전체 (모든 앱)               | 동일 개발사의 앱                            |
 | **사용자 제어** | 사용자가 직접 재설정 및 거부 가능 | 사용자가 직접 제어 불가 (앱 삭제 시 초기화) |
 | **플랫폼**      | 안드로이드                        | iOS, mac                                    |
+
+---
+
+[Windows 11 Start Menu Revealed as Resource-Heavy React Native App, Sparks Performance Concerns](https://winaero.com/windows-11-start-menu-revealed-as-resource-heavy-react-native-app-sparks-performance-concerns/)
+
+- [React Native for Windows is helping Settings improve more quickly React Native](https://devblogs.microsoft.com/react-native/rnw-settings-win11/)
+
+    Recent observations from users on the social platform X have uncovered performance issues tied to the Windows 11 Start Menu, revealing that the component is built using React Native - a framework known for its cross-platform flexibility but criticized for inefficiency in system-level applications.
+
+    Users report that clicking the Start button can spike CPU usage by 30% to 70% on at least one core, depending on the hardware configuration. The issue doesn't occur consistently across all systems, with some users noting it happens in about 50% of clicks.
+
+    This revelation has reignited discussions around software optimization and resource management in modern operating systems. Notably, legendary game developer John Carmack recently weighed in on a related topic during a discussion dubbed the "CPU Apocalypse" thought experiment.
+
+- Windows11 의 시작 메뉴를 누르면 cpu 사용량이 30 ~ 70% 까지 치솟는다는 사례 확인. windows11 이 사용하는 react native 프레임워크가 원인.
+- 범용성 & 호환성을 이유로 점점 비대해지는 windows 에 대한 우려
+
+[Linux (SteamOS) vs Windows benchmarks on Legion Go S by Dave2D : r/linux_gaming](https://www.reddit.com/r/linux_gaming/comments/1kv82bz/linux_steamos_vs_windows_benchmarks_on_legion_go/)
+
+리눅스 기반의 Steam OS 는 가벼운 운영체제 위에서 빠르게 기동한다는 것과 대조됨... windows 보다 유의미한 성능 차이를 보여줌.
+
+**LEGION GO: SteamOS vs Windows 게임 성능 비교 (출처: DAVE2D)**
+
+| 게임 (Game)                     | 🔴 SteamOS (평균 FPS) | 🔵 Windows (평균 FPS) | 성능 우위 |
+| :---                            | :---:                 | :---:                 | :---:     |
+| **사이버펑크 2077**             | **55**                | 48                    | SteamOS   |
+| **발더스 게이트 3**             | **61**                | 49                    | SteamOS   |
+| **앨런 웨이크 2**               | **28**                | 25                    | SteamOS   |
+| **스파이더맨: 마일즈 모랄레스** | **75**                | 65                    | SteamOS   |
+| **스타필드**                    | **41**                | 39                    | SteamOS   |
+| **더 라스트 오브 어스 파트 1**  | **39**                | 36                    | SteamOS   |
+
+**결론:** DAVE2D가 테스트한 모든 게임에서 **SteamOS**가 Windows보다 더 높은 프레임을 보여주며 일관되게 우수한 성능을 기록했습니다.
