--- a/Document_2025/C_2025.md
+++ b/Document_2025/C_2025.md
@@ -3392,3 +3392,75 @@ AsyncLocal 을 통해 실행 흐름 간의 값을 공유하는 경우
 - 트레이스 (Traces): 트레이스는 분산 시스템 환경에서 **단일 요청의 전체 이동 경로**. 마이크로서비스 아키텍처에서 요청이 여러 서비스를 거칠 때, 그 여정과 각 단계에서 소요된 시간을 시각적으로 표현하여 병목 지점을 찾는 데 매우 유용합니다.
   * 요청의 시작부터 끝까지 연결된 스팬(Span)들의 트리 구조
   * 분산 환경에서의 요청 흐름 추적, 서비스 간 의존성 파악, 성능 병목 구간 식별
+
+## 25.07.30
+
+[(1382) 최종조사결과에서 밝혀진 SKT가 해킹 당한 이유!!!](https://www.youtube.com/watch?v=XRHV71Tma1Y&list=WL&index=3)
+
+[SK텔레콤 침해사고 최종 조사결과 발표 - 부처 브리핑 | 브리핑룸 | 대한민국 정책브리핑](https://www.korea.kr/briefing/policyBriefingView.do?newsId=156696819)
+
+[보도자료 - 과학기술정보통신부](https://www.msit.go.kr/bbs/view.do?sCode=user&mId=307&mPid=208&pageIndex=10&bbsSeqNo=94&nttSeqNo=3185964&searchOpt=ALL&searchTxt=)
+
+- SK텔레콤 침해사고 최종 조사결과 발표
+
+![250730_SKT_hacking](img/250730_SKT_hacking.png)
+
+1. A 서버 진입 (어떻게 내부망 서버에 진입했는지에 대한 설명 누락)
+2. A 서버에서 B 서버 계정 정보 획득 (내부 파일에 평문으로 저장되어 있었다.)
+3. B 서버 로그인
+4. B 서버에서 HSS 서버 계정 획득
+5. HSS 서버 로그인
+
+
+**피해규모**
+
+    조사단은 이번 침해사고로 공격을 받은 총 28대의 서버에 대한 포렌식 분석 결과, BPFDoor 27종, 타이니쉘 3종, 웹쉘 1종, CrossC2 1종, 슬리버 1종 등 악성코드 33종을 확인하였습니다.
+
+    또한, 유출된 정보는 전화번호, 가입자 식별번호(IMSI) 등 유심정보 25종이며, 확인된 유출 규모는 9.82GB, IMSI 기준 약 2,696만 건이었습니다.
+
+**유출 경로**
+
+- 로그가 남아있지 않고, 내부 파일에 보안 계정 정보가 평문으로 저장되어 있었음.
+
+    한편, 조사단은 감염서버 중 단말기식별번호(IMEI), 이름, 전화번호 등 개인정보가 평문으로 임시 저장된 서버 2대와 통신기록(CDR)이 평문으로 임시 저장된 서버 1대를 발견하였으나,
+    정밀 분석 결과 방화벽 로그 기록이 남아 있는 기간에는 자료 유출 정황이 없는 것을 확인하였습니다.
+
+    다만, 악성코드가 감염된 시점부터 방화벽 기록이 남아있지 않은 기간에는 정보유출 여부를 확인할 수 없었습니다.
+
+    ...
+
+    먼저, 초기 침투 단계에서 공격자는 외부 인터넷 연결 접점이 있는 시스템 관리망 내 서버 A에 접속한 후 2021년 8월 6일 타 서버에 침투하기 위해 원격제어 등의 기능이 포함된 CrossC2라는 악성코드를 설치하였습니다.
+
+    당시 서버 A에는 시스템 관리망 내 서버들의 계정 ID, 비밀번호 등이 평문으로 저장되어 있었으며 공격자는 동 계정정보를 활용해 시스템 관리망 내 서버 B에 접속한 것으로 추정됩니다.
+
+    조사단은 추정의 근거로 서버 A에 평문으로 저장된 ID, 비밀번호를 활용해 서버 B에 접속한 로그기록은 남아 있지 않으나 시스템 관리망 내 타 서버에 접속한 기록은 남아 있어 서버 B에도 같은 방식으로 접속이 가능하다고 판단하였습니다.
+
+    또한, 당시 서버 B에는 코어망 내 음성통화인증(HSS) 관리서버의 계정정보가 평문으로 저장되어 있었으며, 공격자는 동 계정정보를 활용하여 2021년 12월 24일 음성통화인증(HSS) 관리서버에 접속 후 동 서버 및 음성통화인증 서버에 BPFDoor를 설치하였습니다.
+
+    둘째, 추가 거점 확보 단계에서 공격자는 시스템 관리망을 통해 고객 관리망 내 서버에 접속한 것으로 추정되며 2022년 6월 15일, 6월 22일에 웹쉘, BPFDoor를 설치하였습니다.
+
+**보안 문제를 2022년에 알고 있었으나 대처하지 않음**
+
+    둘째, SK텔레콤은 과거 침해사고에 대한 대응이 미흡하였습니다.
+
+    조사단은 조사 과정에서 SK텔레콤이 2022년 2월 23일 특정 서버에서 비정상 재부팅이 발생한 사실을 확인하고 당시 해당 서버 및 연계된 서버들을 점검한 것을 발견할 수 있었습니다, 확인하였습니다.
+
+**정보통신망법 위반 사항**
+
+- 보안 사고 인지 후 24시간 이내에 당국 신고하지 않음.
+- 사후 포렌식 분석을 위해 서버 장비 제출을 의뢰했으나 자료보전 명령을 어기고 포렌식 분석이 불가능한 상태로 조사단에 제출
+
+    다음으로, SK텔레콤의 정보통신망법 등 법령 위반 사항에 대해 말씀드리겠습니다.
+
+    먼저, SK텔레콤은 정보통신망법 제48조의3에 따라 침해사고를 인지한 후 24시간 이내에 당국에 신고를 했어야 합니다.
+
+    그러나 이번 침해사고 시 SK텔레콤은 사고를 인지하고 24시간이 지난 후 침해사고를 신고하였습니다.
+
+    또한, 2022년 2월에는 악성코드 타이니쉘 2종에 감염된 서버를 발견하고도 침해사고를 신고하지 않았습니다.
+
+    이에 과기정통부는 정보통신망법에 따라 각각 3,000만 원 이하 과태료를 부과할 계획입니다.
+
+    또한, 과기정통부는 정보통신망법 제48조의4에 따라 사고 원인 분석을 위해 자료보전 명령을 사업자에게 하였습니다. 그러나 사업자는 서버 2대를 포렌식 분석이 불가능한 상태로 임의 조치한 후 조사단에 제출하였습니다.
+
+
+
