--- a/Document_2025/C_2025.md
+++ b/Document_2025/C_2025.md
@@ -3462,5 +3462,40 @@ AsyncLocal 을 통해 실행 흐름 간의 값을 공유하는 경우
 
     또한, 과기정통부는 정보통신망법 제48조의4에 따라 사고 원인 분석을 위해 자료보전 명령을 사업자에게 하였습니다. 그러나 사업자는 서버 2대를 포렌식 분석이 불가능한 상태로 임의 조치한 후 조사단에 제출하였습니다.
 
+## 25.08.03
+
+[(1403) MS는 왜 Java를 제거하려 했을까? (기술 냉전 중 탄생한 C#과 .NET)](https://www.youtube.com/watch?v=nGj7T0hSsWA&list=WL&index=3)
+
+    Sun Microsystems와 Microsoft의 경쟁 이야기를 담고 있습니다. 두 회사의 갈등은 주로 Java 프로그래밍 언어를 둘러싼 것이었습니다.
+
+    썬 마이크로시스템즈는 자바(Java)를 만들어, 어떤 컴퓨터에서도 작동할 수 있는 언어, "한 번 작성하면 어디서나 실행 가능한 언어"를 목표로 했습니다.
+
+    이 아이디어는 마이크로소프트에게 큰 위협이었습니다. 윈도우 운영체제의 독점이 흔들릴 수 있었기 때문입니다.
+
+    마이크로소프트는 이에 맞서 자사의 윈도우에 최적화된 자바(Java) 버전을 만들었습니다. 이런 전략은 흔히 "수용, 확장, 제거"라고 불립니다. Microsoft's "Embrace, Extend, Extinguish" strategy.
+
+    1997년, Sun Microsystems는 Microsoft를 상대로 소송을 제기했습니다. 마이크로소프트가 자바의 호환성을 해쳤고, 계약을 위반했다고 주장했습니다.
+
+    이 소송은 2001년에 마무리되었고, 마이크로소프트는 Sun에게 2천만 달러를 지급했습니다. 또한 "자바 호환(Java compatible)"이라는 표현을 자사 제품에 사용할 수 없게 되었습니다.
+
+    하지만 이 사건 이후에도 두 회사의 경쟁은 계속됐습니다. 웹 서비스와 전자상거래 소프트웨어 같은 분야에서 맞붙었고, 마이크로소프트는 C#이라는 자바와 비슷한 언어와 닷넷(.NET) 프레임워크를 개발해 대항했습니다.
+
+    이 이야기는 소프트웨어 표준을 놓고 벌어진 기술 대기업들의 치열한 경쟁을 보여줍니다. 자바 프로그래밍 언어는 그 과정 속에서도 성장했고, 결국 오라클에 인수되었으며, 이후 구글과의 소송까지 이어졌습니다.
+
+이번 영상 주요 논점입니다:
+
+1. 자바의 약속: "한 번 작성하면 어디서나 실행된다." 썬 마이크로시스템즈와 마이크로소프트 사이의 치열한 경쟁을 설명합니다.
+
+2. Microsoft가 느낀 위협: 마이크로소프트는 자바 프로그래밍 언어가 위협적이라고 생각했습니다. 자바는 어떤 컴퓨터에서도 실행될 수 있어서, 윈도우에 대한 의존도를 줄일 수 있었기 때문입니다. "한 번 작성하면 어디서나 실행"된다는 Java의 약속은 마이크로소프트의 운영체제 지배력을 흔들 수 있었습니다.
+
+3. Microsoft의 "수용, 확장, 제거" 전략: 이에 마이크로소프트는 윈도우에 특화된 자바 버전을 만들었습니다. 이런 전략은 "포용하고, 확장하고, 제거한다"는 뜻의 전략으로 잘 알려져 있습니다.
+
+4. Sun Microsystems의 법적 대응: 이에 반발해 썬 마이크로시스템즈는 마이크로소프트를 상대로 소송을 제기했습니다. 마이크로소프트가 자바의 범용 호환성을 해치고, "자바 호환"이라는 상표를 부당하게 사용했다고 주장했습니다.
+
+5. 합의와 그 이후: 결국 두 회사는 합의에 도달했습니다. 마이크로소프트는 썬에게 돈을 지불했고, 앞으로는 자사 제품에 "자바 호환(Java compatible)"이라는 말을 사용할 수 없게 되었습니다.
+
+6. 논평: 놀라운 Java 여정과 생존력. 누가 자꾸 "Java는 죽었다" 합니까? 마이크로소프트가 자바를 막으려 했지만, 자바는 살아남았습니다. 이후 자바 언어는 기업용 소프트웨어와 여러 기기에서 널리 사용되며 성장했고, 오늘날에도 디지털 세상의 중요한 기술로 남아 있습니다.
+
+
 
 
