--- a/Document_2025/C_2025.md
+++ b/Document_2025/C_2025.md
@@ -3515,3 +3515,43 @@ AsyncLocal 을 통해 실행 흐름 간의 값을 공유하는 경우
     C# is pronounced, “see sharp”. The name was taken from the musical notation, whereby a sharp symbol points that the written note should be played a semitone higher.
     The “sharp” suffix has been used by several other .
 
+
+## 25.08.07
+
+[(14) 웹사이트 크기가 14kB 미만이어야 하는 이유](https://www.youtube.com/watch?v=ciNXbR5wvhU)
+
+- [Why your website should be under 14kB in size | endtimes.dev](https://endtimes.dev/why-your-website-should-be-under-14kb-in-size/)
+
+웹사이트 크기가 **14kB 미만**이어야 하는 주된 이유는 **TCP의 '느린 시작(slow start)' 알고리즘** 때문입니다. 🚀 이 알고리즘은 서버가 데이터를 한 번에 보낼 수 있는 양을 조절하여 네트워크 혼잡을 방지하는 역할을 합니다.
+
+### 📝 TCP 느린 시작(Slow Start) 동작 방식
+
+| 단계      | 설명                                                                                      |
+| :---      | :---                                                                                      |
+| **1단계** | 서버가 처음에는 10개의 TCP 패킷만 보냄.                                                   |
+| **2단계** | 이 패킷들이 성공적으로 수신되면, 다음에는 20개, 그 다음에는 40개... 씩 두 배로 늘려 보냄. |
+| **3단계** | 패킷 손실이 발생하면 전송 속도를 늦춤.                                                    |
+
+### 🔍 14kB가 중요한 이유
+
+* 대부분의 웹 서버는 **첫 번째 데이터 전송(round trip) 시 10개의 TCP 패킷**을 보냅니다.
+* 하나의 TCP 패킷은 헤더를 제외하고 **약 1,460바이트**의 데이터를 담을 수 있습니다.
+* 따라서 10개의 패킷은 대략 **14kB**의 데이터를 전송할 수 있습니다.
+* 즉, 웹사이트의 핵심 콘텐츠를 14kB 안에 담으면 **한 번의 데이터 전송**만으로도 사용자에게 유용한 정보를 보여줄 수 있어 로딩 시간을 획기적으로 줄일 수 있습니다. 💨 특히 지연 시간이 긴 모바일이나 위성 인터넷 환경에서 더욱 중요합니다.
+
+### 🌟 추가 고려 사항
+
+* **14kB는 압축된 크기**를 의미합니다.
+* HTTP/2 및 HTTP/3(QUIC)과 같은 최신 프로토콜도 이와 유사한 메커니즘을 사용하므로, 14kB 규칙은 여전히 유효합니다.
+
+---
+
+- TCP 의 Slow Start 동작은 OS 커널 단에서 수행하는 기능.
+  - 14KB 가 어떻게 나왔나면, tcp 패킷의 최대 용량은 1,500byte 이며, 여기서 tcp 헤더 사이즈(4byte) 를 제외하고 slow start 1단계에 보내는 패킷 수 (10개)를 곱하면 14.6KB
+  - TCP 패킷의 최대 용량은 Ethernet 표준을 따르는 것.
+  - [Ethernet frame](https://en.wikipedia.org/wiki/Ethernet_frame)
+- 연결 초기에 천천히 패킷을 보내다가, 네트워크 대역폭(bandwidth) 등의 상황을 살핀 후 한 번에 전송하는 패킷 수를 늘려가는 것(10 -> 20 -> 40 ...)
+  - 정확히는 혼잡 윈도우(Congestion Window) 사이즈를 늘린다.
+- 웹 페이지의 경우 14kb 안쪽으로 웹 페이지 용량을 맞춘다면, 첫 slow start 패킷 전송으로 페이지를 띄우기 위한 리소스를 전부 전송 가능하다.
+  - 만약 14kb 를 넘어서서 1라운드에 전부 보내지 못한 경우, 포스트에는 2라운드 패킷을 받기까지 레이턴시 시간 손실을 계산한 내용이 있다. 
+  - 궤도 위성을 거쳐 전송되는 경우, 
