--- a/Document_2025/C_2025.md
+++ b/Document_2025/C_2025.md
@@ -3555,3 +3555,45 @@ AsyncLocal 을 통해 실행 흐름 간의 값을 공유하는 경우
 - 웹 페이지의 경우 14kb 안쪽으로 웹 페이지 용량을 맞춘다면, 첫 slow start 패킷 전송으로 페이지를 띄우기 위한 리소스를 전부 전송 가능하다.
   - 만약 14kb 를 넘어서서 1라운드에 전부 보내지 못한 경우, 포스트에는 2라운드 패킷을 받기까지 레이턴시 시간 손실을 계산한 내용이 있다. 
   - 궤도 위성을 거쳐 전송되는 경우, 
+
+## 25.08.13
+
+**.NET 10 Preview : `dotnet run app.cs`**
+
+[Announcing dotnet run app.cs - A simpler way to start with C and .NET 10 - .NET Blog](https://devblogs.microsoft.com/dotnet/announcing-dotnet-run-app/)
+
+- [Exploring the features of dotnet run app.cs](https://andrewlock.net/exploring-dotnet-10-preview-features-1-exploring-the-dotnet-run-app.cs/)
+
+    You can now run a C# file directly using dotnet run app.cs. This means you no longer need to create a project file or scaffold a whole application to run a quick script, test a snippet, or experiment with an idea. It’s simple, intuitive, and designed to streamline the C# development experience, especially for those just getting started.
+
+    Until now, executing C# code using the dotnet CLI required a project structure that included a .csproj file. With this new capability, which we call file-based apps, you can run a standalone .cs file directly, much like you would with scripting languages such as Python or JavaScript.
+
+    This lowers the entry barrier to trying out C# and makes the language a much more attractive choice for learning, prototyping, or automation scenarios.
+
+- **Quick Start, No Project File Required** – Great for learning, experimentation, and small scripts.
+- **First-Class CLI Integration** – No extra tools, no dependencies, just dotnet and your .cs file.
+- **Scales to Real Applications** – This isn’t a separate dialect or runtime. When your script grows up, it can evolve into a full-fledged project using the same language, syntax, and tooling.
+
+* python, javascript 처럼 단일 cs 파일만 만들고 바로 실행할 수 있다.
+* .csproj 프로젝트를 준비하지 않아도 괜찮다. 만약 Nuget 패키지 참조를 위한  file-level directive 를 지원한다.
+
+```cs
+#:package Humanizer@2.14.1
+#:sdk Microsoft.NET.Sdk.Web
+#:property LangVersion preview
+
+using Humanizer;
+
+var dotNet9Released = DateTimeOffset.Parse("2024-12-03");
+var since = DateTimeOffset.Now - dotNet9Released;
+
+Console.WriteLine($"It has been {since.Humanize()} since .NET 9 was released.");
+
+```
+
+* 파일 자체를 바로 executable 하게 설정할 수 있다.
+
+```
+chmod +x app.cs
+./app.cs
+```
