--- a/Document_2025/C_2025.md
+++ b/Document_2025/C_2025.md
@@ -3598,6 +3598,62 @@ chmod +x app.cs
 ./app.cs
 ```
 
+...
+
+[C 14 - Exploring extension members - .NET Blog](https://devblogs.microsoft.com/dotnet/csharp-exploring-extension-members/)
+
+- as-is
+
+```cs
+// An extension property `IsEmpty` is declared in a separate class
+public void Operate(IEnumerable<string> strings)
+{
+   if (strings.IsEmpty)
+   {
+       return;
+   }
+   // Do the operation
+}
+```
+
+- to-be
+  * extension 블록 안에서 확장 메서드 & 프로퍼티를 작성하는 방식이다. 모양새가 좀 낯설다. C# 에서 평소 지원하는 문법 형태가 아니다.
+
+```cs
+public static class MyExtensions
+{
+    public static IEnumerable<int> ValuesLessThan(this IEnumerable<int> source, int threshold)
+            => source.Where(x => x < threshold);
+
+    extension(IEnumerable<int> source)
+    {
+        public IEnumerable<int> ValuesGreaterThan(int threshold)
+            => source.Where(x => x > threshold);
+
+        public IEnumerable<int> ValuesGreaterThanZero
+            => source.ValuesGreaterThan(0);
+    }
+}
+```
+    The new extension method syntax separates the receiver, placing it on the extension block.
+    This provides a home for the receiver when the member does not have parameters, like extension properties.
+
+    Within the extension block, code looks just like it would appear if the members were placed on the underlying type.
+
+```cs
+public static class MyExtensions
+{
+   extension(IEnumerable<int> source)
+    {
+        public IEnumerable<int> ValuesGreaterThanZero
+        {
+             get
+             { ...
+```
+
+- 확장 Property 를 새로 지원한다.
+
+
 ## 25.08.22
 
 **Google AI Contents 의 SynthID**
