--- a/Document_2025/C_2025.md
+++ b/Document_2025/C_2025.md
@@ -4078,3 +4078,43 @@ By default, if I git clone a repo with many revisions of a noisome 25 MB PNG fil
 
 - 이 글이 LFS를 부당하게 평가하고 있음. LFS는 GitHub에 종속적이지 않고 프로토콜도 오픈임. LFS의 단점은 git 확장으로서 어쩔 수 없는 부분이고, promisors도 사실상 LFS와 같은 개념임. 단, git 내부에 내장하면서 UX가 좀 더 좋아진 것임
   - 한 번이라도 LFS를 쓴 저장소는 영구적으로 락인됨. 사용한 공간을 줄이려면 저장소 자체를 삭제해야 하고, 이는 공식적으로 명확히 알려주지도 않음. 우리 회사 Github 통계를 연구할 때 대용량 압축 DB 파일을 LFS에 넣었다가 이 문제를 직접 경험함
+
+---
+
+[Protocol Buffers Documentation](https://protobuf.dev/)
+
+데이터 구조 직렬화 기법
+
+- [(118) 유저 27억 명을 가진 유튜브의 최적화 기술](https://www.youtube.com/watch?v=R8ND9EJ8vE8)
+- 유튜브는 gRPC 를 사용하고 gRPC 는 protocol buffer 기반으로 데이터 포맷
+
+Protocol Buffers(Protobuf)는 JSON보다 훨씬 높은 압축률을 보입니다.
+
+`.proto` 파일에 정의된 **스키마**를 기반으로 데이터를 바이어리 인코딩 + 필드 이름은 이 과정에서 제거되고 스키마에 정의된 **필드 번호**를 사용
+
+
+```json
+{
+  "name": "John Doe",
+  "id": 12345,
+  "is_admin": false,
+  "roles": [
+    "user",
+    "editor"
+  ]
+}
+```
+
+```protobuf
+message User {
+  string name = 1;
+  int32 id = 2;
+  bool is_admin = 3;
+  repeated string roles = 4;
+}
+```
+
+- JSON 문자열의 크기는 **85 바이트**
+  * 필드 이름(`"name"`, `"id"`, `"is_admin"`, `"roles"`)이 데이터 자체보다 더 많은 바이트를 차지
+- protobuf 데이터는 필드 이름 없이 값과 필드 번호만 포함하므로, **20\~30 바이트** 수준
+
